--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1982,7 +1982,7 @@ input[type="radio"] + label:before {
   display: block;
   height: 100%;
   left: 0;
-  opacity: 0.5;
+  opacity: 0.1;
   position: absolute;
   top: 0;
   width: 100%;
@@ -2021,7 +2021,7 @@ input[type="radio"] + label:before {
 }
 
 .image.thumb:hover:before {
-  background: url("images/overlay.png"), url("images/overlay.png");
+  /*background: url("images/overlay.png"), url("images/overlay.png");*/
   opacity: 1.0;
 }
 
