--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -901,12 +901,11 @@
 		@include vendor('flex-direction', 'column');
 		@include vendor('align-items', 'flex-end');
 		@include vendor('justify-content', 'space-between');
-		background-color:		_palette(accent2, bg);
-		background-attachment:	scroll,								fixed;
-		background-image:		url('images/overlay.png'),			url('../../images/bg.jpg');
-		background-position:	top left,							top left;
-		background-repeat:		repeat,								no-repeat;
-		background-size:		auto,								auto 100%;
+		background-color: _palette(accent2, bg);
+		background-attachment: scroll, fixed;
+		background-position: top left, top left;
+		background-repeat: repeat, repeat;
+		background-size: auto, auto;
 		color: _palette(accent2, fg);
 		height: 100%;
 		left: 0;
@@ -1293,7 +1292,7 @@
 			#footer {
 				background-attachment:	scroll;
 				background-color:		_palette(accent2, bg);
-				background-image:		url('images/overlay.png'),		url('../../images/bg.jpg');
+				//background-image:		url('images/overlay.png'),		url('../../images/bg.jpg');
 				background-position:	top left,						bottom center;
 				background-repeat:		repeat,							no-repeat;
 				background-size:		auto,							cover;
